Hide/Mask menu, Hotkey for lasso mask in sculpt mode unchangeable #46346

Closed
opened 2015-10-02 12:34:15 +02:00 by Reiner Prokein · 6 comments

System Information
Operating system and graphics card

Windows 7 Home 64 Bit
GTX 760

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Blender 2.76 RC3

Short description of error

You cannot change the hotkey for the lasso mask in the rmb menu of the menu item. It shows the hotkey Shift Ctrk Left mouse. Normally when you have a menu item with a hotkey assigned, then you have a menu entry in the RMB menu called change shortcut. But in the right click menu for Lasso Mask you just see a Add Shortcut item. And when you try to change the hotkey, then nothing happens.

unchangeablehotkeysculptmode.jpg

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Start Blender. Select the standard cube (or create one). Switch into Sculpt mode. Go to Hide/Mask and right click at Lasso Mask. Try to change the hotkey.

**System Information** Operating system and graphics card Windows 7 Home 64 Bit GTX 760 **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) Blender 2.76 RC3 **Short description of error** You cannot change the hotkey for the lasso mask in the rmb menu of the menu item. It shows the hotkey Shift Ctrk Left mouse. Normally when you have a menu item with a hotkey assigned, then you have a menu entry in the RMB menu called change shortcut. But in the right click menu for Lasso Mask you just see a Add Shortcut item. And when you try to change the hotkey, then nothing happens. ![unchangeablehotkeysculptmode.jpg](https://archive.blender.org/developer/F241617/unchangeablehotkeysculptmode.jpg) **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Start Blender. Select the standard cube (or create one). Switch into Sculpt mode. Go to Hide/Mask and right click at Lasso Mask. Try to change the hotkey.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tiles

Added subscriber: @tiles

Added subscriber: @mont29

Added subscriber: @mont29

Yep, logic here is broken in UI code (note that you can only edit 'keybaord' shortcuts, the others should show no add nor edit/remove options, will also add a warning/info entry here instead for those non-keyboard case).

Yep, logic here is broken in UI code (note that you can only edit 'keybaord' shortcuts, the others should show no add nor edit/remove options, will also add a warning/info entry here instead for those non-keyboard case).
Bastien Montagne self-assigned this 2015-10-02 13:09:10 +02:00

This issue was referenced by e49b934955

This issue was referenced by e49b934955e4bfd3f97836dfe9c5c0fd6d504055

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46346
No description provided.