Fix T46346: Hide/Mask menu, Hotkey for lasso mask in sculpt mode unchangeable.

One can only edit keyboard shortcuts from that menu, others will now show a short
info about that instead of stupid 'Add' option!